# sparse

./: .clangd  .gitignore  .gitmodules  Guide.html  Makefile.am  Makefile.in  README.md  README.md.in  annotated.html  build-aux  classes.html  configure  configure.ac  create_8c-example.html  create_8c_source.html  dir_000001_000003.html  dir_000004_000000.html  dir_000005_000003.html  dir_360dc52ed9c3b828dcf54e61be45a16d.html  dir_360dc52ed9c3b828dcf54e61be45a16d.js  dir_360dc52ed9c3b828dcf54e61be45a16d_dep.map  dir_360dc52ed9c3b828dcf54e61be45a16d_dep.md5  dir_5f8b0640e5932371817492fbea7c4e60.html  dir_5f8b0640e5932371817492fbea7c4e60.js  dir_5f8b0640e5932371817492fbea7c4e60_dep.map  dir_5f8b0640e5932371817492fbea7c4e60_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_82803e0965c3edd09522de660edc9316.html  dir_82803e0965c3edd09522de660edc9316.js  dir_82803e0965c3edd09522de660edc9316_dep.map  dir_82803e0965c3edd09522de660edc9316_dep.md5  dir_cc01d3a42e68b1de673fc25885f0e95e.html  dir_cc01d3a42e68b1de673fc25885f0e95e.js  dir_cc01d3a42e68b1de673fc25885f0e95e_dep.map  dir_cc01d3a42e68b1de673fc25885f0e95e_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4.js  (+120 more)
.github/workflows/: makefile.yml
docs/: doxyconf
examples/: Makefile.am  examples.dox  sparse_matrix.c
search/: all_0.js  all_10.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  groups_0.js  groups_1.js  pages_0.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
src/: Makefile.am  Makefile.in  sparce_array.c  sparce_array.h  sparse.c  sparse.h  sparse_array.c  sparse_array.h
tests/: Makefile.am  Makefile.in  sparce_array_test.c  sparse_array_test.c  sparse_test.c
